--- a/Exercise-01 display-grid/Starter/app.css
+++ b/Exercise-01 display-grid/Starter/app.css
@@ -59,6 +59,6 @@ h1 {
 
   /* ⬇️⬇️⬇️ STYLE THE GRID CONTAINER HERE ⬇️⬇️⬇️ */
   display: grid;
-  grid-template-columns: 300px;
+  grid-template-columns: 300px 300px 300px;
   /* ⬆️⬆️⬆️ STYLE THE GRID CONTAINER HERE ⬆️⬆️⬆️ */
 }
