--- a/Exercise-01 display-grid/Starter/app.css
+++ b/Exercise-01 display-grid/Starter/app.css
@@ -59,6 +59,6 @@ h1 {
 
   /* ⬇️⬇️⬇️ STYLE THE GRID CONTAINER HERE ⬇️⬇️⬇️ */
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  grid-template-columns: 1fr 1fr 1fr;
   /* ⬆️⬆️⬆️ STYLE THE GRID CONTAINER HERE ⬆️⬆️⬆️ */
 }
